--- a/Sistema/src/EditClient.form
+++ b/Sistema/src/EditClient.form
@@ -95,7 +95,7 @@
     <Component class="javax.swing.JButton" name="jButton1BUSCAR">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Anderson\Desktop\Sistema\img\loupe.png"/>
+          <Image iconType="3" name="/img/loupe.png"/>
         </Property>
       </Properties>
       <Events>
@@ -286,6 +286,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancelar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCancelarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
       <Properties>
